--- a/administer/accounts-teams.mdx
+++ b/administer/accounts-teams.mdx
@@ -37,10 +37,10 @@ additional context about each entry type:
 
 | Icon                                      | Description |
 | :---------------------------------------: | ----------- |
-| <Icon path={ mdiAccount} />             | An active user account. |
-| <Icon path={ mdiRobot } />              | A service account. |
-| <Icon path={ mdiMinusCircleOutline } /> | An invited user who's yet to confirm their account. |
-| <Icon path={ mdiCloseCircleOutline } /> | A deactivated user account. |
+| <Icon icon="user" />             | An active user account. |
+| <Icon icon="robot" />              | A service account. |
+| <Icon icon="circle-minus" /> | An invited user who's yet to confirm their account. |
+| <Icon icon="circle-xmark" /> | A deactivated user account. |
 
 A <Icon icon="key" /> **System Administrator** icon to the right of an entry
 indicates either a team that has the System Administrator (SysAdmin) role, or
