--- a/administer/limits-licensing/licensing.mdx
+++ b/administer/limits-licensing/licensing.mdx
@@ -52,7 +52,7 @@ license versus your capacity. This page also shows your
 </Tab>
 </Tabs>
 
-Hold the pointer over a graph to display the <Icon path={ mdiDotsVertical } /> three
+Hold the pointer over a graph to display the <Icon icon="ellipsis-vertical" /> three
 vertical dots icon. Select this icon to display a menu where you can select a
 relevant Observability Platform tool for to use for detailed analysis. See
 [common panel elements](/observe/dashboards/panels#common-panel-elements) for an
