--- a/administer/pinned-scopes.mdx
+++ b/administer/pinned-scopes.mdx
@@ -19,7 +19,7 @@ To create a scope:
 1. In the navigation menu, click **<Icon icon="shield" /> Go to Admin**
    and then select
    **<Icon icon="wrench" /> Platform <span aria-label="and then">></span> Scope Configuration**.
-1. Click **<Icon path={mdiPlus } /> Create**.
+1. Click **<Icon icon="plus" /> Create**.
 1. Add values to the following fields:
    - **Scope category name**: A name by which to group your filters. For
      example, the category `Environment` might contain filters for `dev`, `test`, and
@@ -36,7 +36,7 @@ To create a scope:
 
 To edit a scope:
 
-1. Click the <Icon path={ mdiDotsVertical } /> three vertical dots icon in the
+1. Click the <Icon icon="ellipsis-vertical" /> three vertical dots icon in the
    row with the scope name.
 1. Click **Edit**.
 1. Update the scope values.
