--- a/control/shaping/quotas/manage-pools.mdx
+++ b/control/shaping/quotas/manage-pools.mdx
@@ -71,7 +71,7 @@ To create quota pools, you must have administrative privileges:
 1. Click **Done** after completing your changes.
 1. Click the **Code Config** tab.
 1. Click **<Icon icon="copy" />Copy** to copy the file, or
-   **<Icon path={ mdiDownload } />Download** to download the file to your computer.
+   **<Icon icon="download" />Download** to download the file to your computer.
 1. Add the definition to a Terraform file, or create a new Terraform file.
 1. Run this command to apply the resource:
 
@@ -339,7 +339,7 @@ To edit an existing pool:
 1. Make any necessary changes, and then click **Done** after completing your changes.
 1. Click the **Code Config** tab.
 1. Click **<Icon icon="copy" />Copy** to copy the file, or
-   **<Icon path={ mdiDownload } />Download** to download the file to your computer.
+   **<Icon icon="download" />Download** to download the file to your computer.
 1. Add the definition to a Terraform file, or create a new Terraform file.
 1. Run this command to apply the resource:
 
