--- a/ingest/metrics-traces/collector/install/kubernetes.mdx
+++ b/ingest/metrics-traces/collector/install/kubernetes.mdx
@@ -173,7 +173,7 @@ Platform tenant:
    count(chronocollector_jobs) by (instance)
    ```
 
-1. Click **<Icon path={ mdiRefresh } />Run**.
+1. Click **<Icon icon="arrows-rotate" />Run**.
 
    The name of your Collector instance returned from the `kubectl logs` command
    displays in the table of metrics:
