--- a/ingest/metrics-traces/collector/install/upgrade.mdx
+++ b/ingest/metrics-traces/collector/install/upgrade.mdx
@@ -80,7 +80,7 @@ the same information the Collector prints when starting. For example:
    count(chronocollector_build_information) by (build_version, instance)
    ```
 
-1. Click **<Icon path={ mdiRefresh } />Run**.
+1. Click **<Icon icon="arrows-rotate" />Run**.
 
    The version of each Collector instance displays in the `build_version` column of
    the query results table. For example:
