--- a/investigate/alerts/troubleshooting.mdx
+++ b/investigate/alerts/troubleshooting.mdx
@@ -70,7 +70,7 @@ After examining alerting thresholds, view the `ALERTS` and `ALERTS_VALUE` metric
 
    Replace `ALERT-NAME` with the name of the alert you copied previously.
 
-1. Click **<Icon path={ mdiRefresh } />Run**.
+1. Click **<Icon icon="arrows-rotate" />Run**.
 
 1. In the table, the `alertstate` is either `pending` or `firing`:
 
@@ -85,7 +85,7 @@ After examining alerting thresholds, view the `ALERTS` and `ALERTS_VALUE` metric
    ALERTS_VALUE{alertname="ALERT-NAME"}
    ```
 
-1. Click **<Icon path={ mdiRefresh } />Run**.
+1. Click **<Icon icon="arrows-rotate" />Run**.
 
 1. Review the line graph to determine when the monitor starts alerting, and to
    identify any gaps in the data.
