--- a/investigate/analyze/differential-diagnosis/metrics.mdx
+++ b/investigate/analyze/differential-diagnosis/metrics.mdx
@@ -54,7 +54,7 @@ Platform, you access it through **Metrics Explorer**, from metrics visualization
 such as services and dashboards, or from individual monitors.
 
 To investigate a query or chart with differential diagnosis, look for a DDx link.
-Some panels in Observability Platform with a <Icon path={ mdiDotsVertical } /> three vertical dots menu
+Some panels in Observability Platform with a <Icon icon="ellipsis-vertical" /> three vertical dots menu
  might also contain a Metrics DDx link, but not all menus have this link.
 
 To access differential diagnosis from Metrics Explorer:
@@ -65,7 +65,7 @@ To access differential diagnosis from Metrics Explorer:
 1. In the section of the query that you want to investigate, click **DDx** to
    display the **Metrics DDx** page, prepopulated with that query.
 1. Create or modify the query if necessary.
-1. Click **<Icon path={ mdiRefresh } /> Run**.
+1. Click **<Icon icon="arrows-rotate" /> Run**.
 
 To access differential diagnosis from a monitor:
 
@@ -79,7 +79,7 @@ To access differential diagnosis from a monitor:
 To access differential diagnosis from other metrics panels in Observability Platform:
 
 1. Generate a query in **Metrics Explorer**.
-1. In any chart, click the <Icon path={ mdiDotsVertical } /> three vertical dots
+1. In any chart, click the <Icon icon="ellipsis-vertical" /> three vertical dots
    and then select **Metrics DDx**. The **Metrics DDx** page opens with the query box
    pre-populated by the query used in the panel.
 
@@ -132,7 +132,7 @@ on the Chronosphere Blog.
 
 The **Metrics DDx** page displays information about correlations within your query's
 results. To change the time range of displayed query results, use the
-<Icon path={ mdiClockOutline } /> [**time range selector**](/navigate/time-ranges)
+<Icon icon="clock" /> [**time range selector**](/navigate/time-ranges)
 or click and drag a time range within a chart. Changing the time range also updates
 the **Metrics DDx** analysis.
 
@@ -251,7 +251,7 @@ to more strongly focus on making visual comparisons between and within charts.
 To change the graph size to suit your display or presentation, select a **S**mall,
 **M**edium, or **L**arge size from the **Graph Size** selector.
 
-In any **Metrics DDx** panel, click the <Icon path={ mdiDotsVertical } /> three
+In any **Metrics DDx** panel, click the <Icon icon="ellipsis-vertical" /> three
 vertical dots to access additional options. See [common panel
 elements](/observe/dashboards/panels#edit-a-panel) for an explanation of the other
 available tools.
