--- a/investigate/analyze/differential-diagnosis/traces.mdx
+++ b/investigate/analyze/differential-diagnosis/traces.mdx
@@ -72,7 +72,7 @@ To access and use differential diagnosis:
 
 1. Use the **Query builder** to
    [define a search](/investigate/querying/traces#define-a-search), and then
-   click **<Icon path={ mdiRefresh } /> Run**.
+   click **<Icon icon="arrows-rotate" /> Run**.
 
    If the time range for your query is broad, such as the last five days, Trace
    Explorer loads results progressively. As results are available, you can click
