--- a/investigate/querying/filter-events.mdx
+++ b/investigate/querying/filter-events.mdx
@@ -192,7 +192,7 @@ privileges can share their saved filters with all users.
 To share a quick filter:
 
 1. Hold the pointer over the filter you want to share.
-1. Click the <Icon path={ mdiDotsVertical } /> three vertical dots icon.
+1. Click the <Icon icon="ellipsis-vertical" /> three vertical dots icon.
 1. Click **Add to quick filters**.
 
 To stop sharing a quick filter, hold the pointer over the filter and then click the
