--- a/investigate/querying/metrics/derived-telemetry/derived-labels.mdx
+++ b/investigate/querying/metrics/derived-telemetry/derived-labels.mdx
@@ -28,7 +28,7 @@ To view derived labels:
    **<Icon icon="wrench" /> Platform <span aria-label="and then">></span> Derived Labels**
    to view all available derived labels.
 1. To view values for a derived label, click the caret (**>**) to expand the label.
-1. Click the <Icon path={ mdiDotsVertical } /> three vertical dots icon for any label
+1. Click the <Icon icon="ellipsis-vertical" /> three vertical dots icon for any label
    to take additional actions:
 
    - Click **View code config** to view a code representation of the derived label.
