--- a/investigate/querying/metrics/query-builder.mdx
+++ b/investigate/querying/metrics/query-builder.mdx
@@ -50,7 +50,7 @@ Use the text boxes to add values which create the PromQL query:
    **Value** pair that selects a subset of the data. Click the
    **<Icon icon="check" /> check** icon to add the filter.
 
-   To add another filter, click the **<Icon path={ mdiPlus } /> plus** icon.
+   To add another filter, click the **<Icon icon="plus" /> plus** icon.
 
 1. In the **Aggregation** menu, you will see options depending on the type of metric.
 
