--- a/investigate/querying/traces.mdx
+++ b/investigate/querying/traces.mdx
@@ -117,12 +117,12 @@ To search traces:
 
    - Select a time range for your query, which defaults to the last 15 minutes.
 
-1. Click **<Icon path={ mdiRefresh } />Run** to submit your query. You must click
-   **<Icon path={ mdiRefresh } />Run** after each time you modify the query criteria.
+1. Click **<Icon icon="arrows-rotate" />Run** to submit your query. You must click
+   **<Icon icon="arrows-rotate" />Run** after each time you modify the query criteria.
 
     <Info>
     You can press `Control+Return` or `Control+Enter` on your
-    keyboard instead of clicking **<Icon path={ mdiRefresh } />Run** to submit a
+    keyboard instead of clicking **<Icon icon="arrows-rotate" />Run** to submit a
     query.
     </Info>
 
