--- a/observe/dashboards.mdx
+++ b/observe/dashboards.mdx
@@ -303,7 +303,7 @@ can also associate Services to dashboards by using either Chronoctl or Terraform
 You can duplicate dashboards, including in Observability Platform, and then customize
 the duplicate. Chronosphere-managed dashboards can be duplicated but not deleted.
 
-1. In the **Dashboards** page, click the <Icon path={ mdiDotsVertical }/> three
+1. In the **Dashboards** page, click the <Icon icon="ellipsis-vertical" /> three
    vertical dots icon and then click **Duplicate**.
 
    Alternately, when viewing a dashboard, click
@@ -501,8 +501,8 @@ To export a dashboard's JSON configuration:
 
 1. In the dashboard, click **<Icon icon="gear" alt="Settings icon"/> Settings**.
 1. From the menu, select **JSON**. The **Dashboard JSON** dialog displays.
-1. Click **<Icon path={ mdiContentCopy } /> Copy** to copy the JSON to your clipboard,
-   or click **<Icon path={ mdiDownload }/>** to download the JSON.
+1. Click **<Icon icon="copy" /> Copy** to copy the JSON to your clipboard,
+   or click **<Icon icon="download"/>** to download the JSON.
 
 You can also manually update the JSON, and then click **Apply** to change the
 dashboard.
