--- a/observe/services/service-pages.mdx
+++ b/observe/services/service-pages.mdx
@@ -190,7 +190,7 @@ You can also copy the query from the Metrics Explorer and paste it into other to
 including a visualization panel in a [dashboard](/observe/dashboards).
 
 Holding the pointer over a chart reveals a
-<Icon path={ mdiDotsVertical }/> three vertical dots menu. When clicked, this provides
+<Icon icon="ellipsis-vertical" /> three vertical dots menu. When clicked, this provides
 options to open the chart's query in Metrics Explorer, add the chart to a dashboard,
 or investigate it using Metrics DDx. See
 [common panel elements](/observe/dashboards/panels#common-panel-elements) for an
