--- a/observe/slo.mdx
+++ b/observe/slo.mdx
@@ -173,7 +173,7 @@ An SLO page's menu provides access to features that modify the SLO's behavior:
   the active muting rule and its expiration.
 
 The menu also includes a link to the <Icon path={ mdiBookOpenVariantOutline } /> documentation
-and a <Icon path={ mdiDotsVertical }/> three vertical dots icon.
+and a <Icon icon="ellipsis-vertical" /> three vertical dots icon.
 
 Click the three vertical dots to select one of the following options:
 
@@ -207,7 +207,7 @@ The following charts visualize performance against the SLO's defined limits:
 - **Error budget**: The SLO's remaining error budget over its defined time window.
 
 As with all charts on the SLO view, hovering over it reveals
-<Icon path={ mdiDotsVertical }/> three vertical dots. When clicked, this provides
+<Icon icon="ellipsis-vertical" /> three vertical dots. When clicked, this provides
 options to open the chart's query in Metrics Explorer, add the chart to a dashboard,
 or investigate it using Metrics DDx. See
 [common panel elements](/observe/dashboards/panels#common-panel-elements) for an
@@ -324,8 +324,8 @@ To view a representation of the SLO as a JSON object for the
 1. Click the resource type dropdown, which defaults to **Terraform**, and select
    **API**.
 
-You can also **<Icon path={ mdiContentCopy } /> Copy** the resource definition
-to your clipboard or **<Icon path={ mdiDownload } /> Download** it.
+You can also **<Icon icon="copy" /> Copy** the resource definition
+to your clipboard or **<Icon icon="download" /> Download** it.
 
 To retrieve the JSON representation using the Chronosphere API:
 
