--- a/snippets/_partials/change-events.mdx
+++ b/snippets/_partials/change-events.mdx
@@ -1,11 +1,11 @@
 
 | Category | Description |
 | -------- | ----------- |
-| <Icon path={ mdiBell } alt="Alert bell icon" style={{ color: 'rgb(255, 126, 71)'}} /> Alerts | Changes in telemetry caught by Observability Platform monitors and the event life cycle they use to track them. This includes alert triggers, resolved alerts, and alert notifications. |
-| <Icon path={ mdiAsterisk } alt="Annotations icon" style={{ color: 'rgb(22, 149, 83)'}} /> Annotations | Changes that are user-generated, such as highlighting incidents or other relevant events. You can also add annotations to a [time series chart's tooltip](/control/consumption/shape-logs/control-logs). |
-| <Icon path={ mdiBroadcast } alt="Broadcast icon" style={{ color: 'rgb(250, 85, 134)'}} /> Broadcasts | Changes that track visibility for an outage, large marketing campaigns starting, or events that might cause an increase in usage such as the end of a sporting event or a big shopping day of the year. |
+| <Icon icon="bell" alt="Alert bell icon" style={{ color: 'rgb(255, 126, 71)'}} /> Alerts | Changes in telemetry caught by Observability Platform monitors and the event life cycle they use to track them. This includes alert triggers, resolved alerts, and alert notifications. |
+| <Icon icon="asterisk" alt="Annotations icon" style={{ color: 'rgb(22, 149, 83)'}} /> Annotations | Changes that are user-generated, such as highlighting incidents or other relevant events. You can also add annotations to a [time series chart's tooltip](/control/consumption/shape-logs/control-logs). |
+| <Icon icon="tower-broadcast" alt="Broadcast icon" style={{ color: 'rgb(250, 85, 134)'}} /> Broadcasts | Changes that track visibility for an outage, large marketing campaigns starting, or events that might cause an increase in usage such as the end of a sporting event or a big shopping day of the year. |
 | ![Chronosphere](/doc-assets/change-event-chronosphere.svg) Chronosphere | Changes to the configuration of Observability Platform that can affect the behavior of persisted data, evaluated by monitors and presented in dashboards. |
-| <Icon path={ mdiRocket } alt="Rocket icon" style={{ color: 'rgb(94, 159, 238)' }} /> Deploys | Changes that track the progress of new code deployed into an environment. |
-| <Icon path={ mdiFlag} alt="Flag icon" style={{ color: 'rgb(165, 130, 237)'}} /> Feature flags | Changes to feature flags and other dynamic configuration controls that affect the way code executes in a program without requiring a deployment. |
-| <Icon path={ mdiCloudCogOutline } alt="Cloud with a cog icon" style={{ color: 'rgb(0, 204, 180)'}} /> Infrastructure | Changes to the underlying operating structures and fabric of an environment, such as networking, security, container orchestration, and data stores. |
-| <Icon path={ mdiLan } alt="Lan icon" style={{ color: 'rgb(188, 204, 0)'}} /> Third party | Changes to the availability or status of dependencies outside of your organization, such as APIs your services rely on that other organizations provide and operate. |
+| <Icon icon="rocket" alt="Rocket icon" style={{ color: 'rgb(94, 159, 238)' }} /> Deploys | Changes that track the progress of new code deployed into an environment. |
+| <Icon icon="flag" alt="Flag icon" style={{ color: 'rgb(165, 130, 237)'}} /> Feature flags | Changes to feature flags and other dynamic configuration controls that affect the way code executes in a program without requiring a deployment. |
+| <Icon icon="cloud" alt="Cloud with a cog icon" style={{ color: 'rgb(0, 204, 180)'}} /> Infrastructure | Changes to the underlying operating structures and fabric of an environment, such as networking, security, container orchestration, and data stores. |
+| <Icon icon="network-wired" alt="Lan icon" style={{ color: 'rgb(188, 204, 0)'}} /> Third party | Changes to the availability or status of dependencies outside of your organization, such as APIs your services rely on that other organizations provide and operate. |
