--- a/tooling/gitops.mdx
+++ b/tooling/gitops.mdx
@@ -52,7 +52,7 @@ Changes you make in the **Visual Editor** tab don't take effect until you click
     - **Chronoctl**
     - **API**
 1. Click **<Icon icon="copy" />Copy** to copy the file, or
-   **<Icon path={ mdiDownload } />Download** to download the file to your computer.
+   **<Icon icon="download" />Download** to download the file to your computer.
 1. Apply the changes.
 
    <Tabs>
