--- a/control/shaping/quotas/define-pools.mdx
+++ b/control/shaping/quotas/define-pools.mdx
@@ -163,7 +163,7 @@ configuration labels require updates to all pools.
 1. Click **Done** when finished.
 1. Click the **Code Config** tab.
 1. Click **<Icon icon="copy" />Copy** to copy the file, or
-   **<Icon path={ mdiDownload } />Download** to download the file to your computer.
+   **<Icon icon="download" />Download** to download the file to your computer.
 1. Add the definition to a Terraform file, or create a new Terraform file.
 1. Run this command to apply the resource:
 
