--- a/ingest/metrics-traces/collector/monitor/verify-metrics.mdx
+++ b/ingest/metrics-traces/collector/monitor/verify-metrics.mdx
@@ -54,7 +54,7 @@ you know the name of the metric or label you're searching for.
    count(chronocollector_jobs) by (instance)
    ```
 
-1. Click **<Icon path={ mdiRefresh } />Run**.
+1. Click **<Icon icon="arrows-rotate" />Run**.
 
 The name of your Collector instance returned from the `kubectl logs` command
 displays in the table of metrics:
