--- a/snippets/_partials/code-config.mdx
+++ b/snippets/_partials/code-config.mdx
@@ -5,7 +5,7 @@ representation:
 1. Click the **Code Config** tab.
 1. Make changes to the resource pool definition.
 1. Click **<Icon icon="copy" />Copy** to copy the file, or
-   **<Icon path={ mdiDownload } />Download** to download the file to your computer.
+   **<Icon icon="download" />Download** to download the file to your computer.
 1. Add the definition to a Terraform file, or create a new Terraform file.
 1. Run this command to apply the resource:
 
