--- a/investigate/analyze/differential-diagnosis/metrics.mdx
+++ b/investigate/analyze/differential-diagnosis/metrics.mdx
@@ -136,7 +136,7 @@ results. To change the time range of displayed query results, use the
 or click and drag a time range within a chart. Changing the time range also updates
 the **Metrics DDx** analysis.
 
-You can pin a time range by clicking the <Icon path={ mdiPinOutline } /> range selector pin,
+You can pin a time range by clicking the <Icon icon="map-pin" /> range selector pin,
 which makes the range persistent as you view other pages in Observability Platform.
 As your investigation continues beyond **Metrics DDx**, pinning your time range
 ensures that your focus on other pages remains on the same period.
@@ -193,7 +193,7 @@ Labels with high correlation scores contribute more data to a given chart. Use t
 sidebar's indicators of correlation strength to prioritize your investigation and
 remove values from visualization.
 
-To change how the list is sorted, click the <Icon path={ mdiSortVariant } /> sort dropdown,
+To change how the list is sorted, click the <Icon icon="bars-sort" /> sort dropdown,
 which defaults to listing the **Most correlated** values first. You can choose to
 instead sort by **Least correlated**, or alphabetically by **Name**.
 
@@ -206,10 +206,10 @@ display the value's precise correlation score, which ranges from 0 to 100.
 
 When you hold the pointer over a label, additional icons also appear:
 
-- **<Icon path={ mdiMagnifyPlusOutline } /> Include label** includes that label's
+- **<Icon icon="magnifying-glass-plus" /> Include label** includes that label's
   data across **Metrics DDx**. Include labels that indicate a correlation in the
   query to exclude other labels from visualizations.
-- **<Icon path={ mdiMagnifyMinusOutline } /> Exclude label** excludes that label's
+- **<Icon icon="magnifying-glass-minus" /> Exclude label** excludes that label's
   data across **Metrics DDx**. Exclude labels that do not indicate a correlation
   to remove them from visualizations for improved clarity.
 
@@ -225,7 +225,7 @@ by search doesn't apply filters that affect the **Label breakdown** section's co
 visualizations.
 
 You can optionally hide the sidebar by clicking the
-<Icon path={ mdiChevronDoubleLeft } /> collapse control, or resize it by clicking
+<Icon icon="chevrons-left" /> collapse control, or resize it by clicking
 and dragging the gap between the sidebar and the visualizations.
 
 #### Visualize correlations
