--- a/observe/slo.mdx
+++ b/observe/slo.mdx
@@ -172,7 +172,7 @@ An SLO page's menu provides access to features that modify the SLO's behavior:
   for this SLO. If a muting rule is already active for an SLO, a banner indicates
   the active muting rule and its expiration.
 
-The menu also includes a link to the <Icon path={ mdiBookOpenVariantOutline } /> documentation
+The menu also includes a link to the <Icon icon="book-open" /> documentation
 and a <Icon icon="ellipsis-vertical" /> three vertical dots icon.
 
 Click the three vertical dots to select one of the following options:
