--- a/observe/slo/manage.mdx
+++ b/observe/slo/manage.mdx
@@ -412,11 +412,11 @@ Use **Dimensions** to generate a time series per combination of labels entered.
 
    1. Click the **Add label filter** field.
    1. Enter a label, select an operator, and enter a value.
-   1. Click the <Icon path={ mdiCheck } /> check icon to add the filter, or
-      the <Icon path={ mdiClose } /> close icon to cancel.
+   1. Click the <Icon icon="check" /> check icon to add the filter, or
+      the <Icon icon="x" /> close icon to cancel.
 
    To remove a filter from the **Add label filter** field, click the
-   <Icon path={ mdiCloseCircle } /> close icon on the chip that represents the
+   <Icon icon="" /> close icon on the chip that represents the
    filter.
 
 #### Labels and annotations
