general fixes to codeblocks

--- a/tooling/infrastructure/terraform/install.mdx
+++ b/tooling/infrastructure/terraform/install.mdx
@@ -138,15 +138,15 @@ Linux and macOS.
 
 1. Download the `darwin_amd64` build of `chronotf`:
 
-   <code class="chrono-code break-words rounded-md border border-black border-opacity-[0.04] bg-black bg-opacity-[0.03] px-[.25em] py-0.5 text-[.9em] dark:border-white/10 dark:bg-white/10">curl -LO {chronotfMacOSIntelLink}</code>
+   <code>curl -LO {chronotfMacOSIntelLink}</code>
 
 1. Make the `chronotf` binary executable.
 
-   <code class="chrono-code break-words rounded-md border border-black border-opacity-[0.04] bg-black bg-opacity-[0.03] px-[.25em] py-0.5 text-[.9em] dark:border-white/10 dark:bg-white/10">chmod +x {chronotfMacOSIntel}</code>
+   <code>chmod +x {chronotfMacOSIntel}</code>
 
 1. Move the binary into your `PATH`:
 
-   <code class="chrono-code break-words rounded-md border border-black border-opacity-[0.04] bg-black bg-opacity-[0.03] px-[.25em] py-0.5 text-[.9em] dark:border-white/10 dark:bg-white/10">sudo mv {chronotfMacOSIntel} /usr/local/bin/chronotf</code>
+   <code>sudo mv {chronotfMacOSIntel} /usr/local/bin/chronotf</code>
 
    If you don't have permission to install to `/usr/local/bin`, replace it with
    another directory in your `PATH`.
@@ -162,15 +162,15 @@ Linux and macOS.
 
 1. Download the `darwin_arm64` build of `chronotf`:
 
-   <code class="chrono-code break-words rounded-md border border-black border-opacity-[0.04] bg-black bg-opacity-[0.03] px-[.25em] py-0.5 text-[.9em] dark:border-white/10 dark:bg-white/10">curl -LO {chronotfMacOSARMLink}</code>
+   <code>curl -LO {chronotfMacOSARMLink}</code>
 
 1. Make the `chronotf` binary executable:
 
-   <code class="chrono-code break-words rounded-md border border-black border-opacity-[0.04] bg-black bg-opacity-[0.03] px-[.25em] py-0.5 text-[.9em] dark:border-white/10 dark:bg-white/10">chmod +x {chronotfMacOSARM}</code>
+   <code>chmod +x {chronotfMacOSARM}</code>
 
 1. Move the binary into your `PATH`:
 
-   <code class="chrono-code break-words rounded-md border border-black border-opacity-[0.04] bg-black bg-opacity-[0.03] px-[.25em] py-0.5 text-[.9em] dark:border-white/10 dark:bg-white/10">sudo mv {chronotfMacOSARM} /usr/local/bin/chronotf</code>
+   <code>sudo mv {chronotfMacOSARM} /usr/local/bin/chronotf</code>
 
    If you don't have permission to install to `/usr/local/bin`, replace it with
    another directory in your `PATH`.
@@ -186,15 +186,15 @@ Linux and macOS.
 
 1. Download the `linux_amd64` build of `chronotf`:
 
-   <code class="chrono-code break-words rounded-md border border-black border-opacity-[0.04] bg-black bg-opacity-[0.03] px-[.25em] py-0.5 text-[.9em] dark:border-white/10 dark:bg-white/10">curl -LO {chronotfLinuxLink}</code>
+   <code>curl -LO {chronotfLinuxLink}</code>
 
 1. Make the `chronotf` binary executable:
 
-   <code class="chrono-code break-words rounded-md border border-black border-opacity-[0.04] bg-black bg-opacity-[0.03] px-[.25em] py-0.5 text-[.9em] dark:border-white/10 dark:bg-white/10">chmod +x {chronotfLinux}</code>
+   <code>chmod +x {chronotfLinux}</code>
 
 1. Move the binary into your `PATH`:
 
-   <code class="chrono-code break-words rounded-md border border-black border-opacity-[0.04] bg-black bg-opacity-[0.03] px-[.25em] py-0.5 text-[.9em] dark:border-white/10 dark:bg-white/10">mv {chronotfLinux} /usr/local/bin/chronotf</code>
+   <code>mv {chronotfLinux} /usr/local/bin/chronotf</code>
 
 1. Test the `chronotf` installation by running it:
 
